@@ -1,3 +1,9 @@
+2017-07-21  Allen D. Ball  <ball@sol>
+
+	* src/main/java/ball/http/client/method/URIBuilderFactory.java:
+	Added getInstance(Method) and getInstance(URISpecification)
+	methods.
+
 2017-03-05  Allen D. Ball  <ball@sol.local>
 
 	* Added support for <http-head/>, <http-options/>, and
